[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/projectile.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]
radius = 0.5
height = 1.0
radial_segments = 8
rings = 8

[sub_resource type="SpatialMaterial" id=6]
resource_local_to_scene = true
flags_unshaded = true

[sub_resource type="SphereShape" id=2]
radius = 0.2

[sub_resource type="SphereMesh" id=4]
radius = 0.6
height = 1.0

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0.866667, 0, 0.0980392 )

[node name="projectile" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
cast_shadow = 0
generate_lightmap = false
mesh = SubResource( 1 )
material/0 = SubResource( 6 )

[node name="hitbox" type="Area" parent="." groups=["projectile"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="hitbox"]
shape = SubResource( 2 )

[node name="body_checker" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="body_checker"]
shape = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="RayCast" type="RayCast" parent="."]
cast_to = Vector3( 0, 0, -1 )
collide_with_areas = true
debug_shape_custom_color = Color( 0.945098, 1, 0, 1 )
debug_shape_thickness = 5.0

[connection signal="area_entered" from="hitbox" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="body_checker" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
